tests/parsing/smtlib/v2.6/errors/124_selector_list_unclosed_1.expected
File "tests/parsing/smtlib/v2.6/errors/124_selector_list_unclosed_1.smt2", line 2, character 34-35:
2 | (declare-datatype foo ((A (x int) _)))
                                      ^
Error while parsing a list of selectors, read the reserved word '_',
      but expected another selector of the form "(selector sort)", or a
      closing parenthesis.
